--- a/index.html
+++ b/index.html
@@ -19,21 +19,18 @@
 </head>
 <body>
   <div class="column">
-    Sedans
-    Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-    or on your next road trip.
+    <h1>Sedans</h1>
+    <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
   </div>
 
   <div class="column">
-    SUVs
-    Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-    and off-road adventures.
+    <h1>SUVs</h1>
+    <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
   </div>
 
   <div class="column">
-    Luxury
-    Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-    rental and arrive in style.
+    <h1>Luxury</h1>
+    <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
   </div>
   
   <div class="attribution">
