--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet"> 
 </head>
 <body>
-  <div class="column">
-    <h1>Sedans</h1>
-    <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
-  </div>
-
-  <div class="column">
-    <h1>SUVs</h1>
-    <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
-  </div>
-
-  <div class="column">
-    <h1>Luxury</h1>
-    <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
+  <div class="row">
+    <div class="column column-first">
+      <h1>Sedans</h1>
+      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+    </div>
+  
+    <div class="column column-second">
+      <h1>SUVs</h1>
+      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
+    </div>
+  
+    <div class="column column-third">
+      <h1>Luxury</h1>
+      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
+    </div>
   </div>
   
   <div class="attribution">
