--- a/index.html
+++ b/index.html
@@ -23,18 +23,21 @@
       <img src="images/icon-sedans.svg" alt="" srcset="">
       <h1>Sedans</h1>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+      <button class="button button-first">Learn More</button>
     </div>
   
     <div class="column column-second">
       <img src="images/icon-suvs.svg" alt="" srcset="">
       <h1>SUVs</h1>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
+      <button class="button button-second">Learn More</button>
     </div>
   
     <div class="column column-third">
       <img src="images/icon-luxury.svg" alt="" srcset="">
       <h1>Luxury</h1>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
+      <button class="button button-third">Learn More</button>
     </div>
   </div>
   
